--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -3,7 +3,12 @@ ion-badge{
 }
 
 ion-item-option{
-  border-radius:3px;
+  border-radius:15px;
   margin-right:5px;
+  border-color:black;
 
 }
+
+ ion-item-options{
+   border-color:#1C1C1C;
+ }
