Inserção de novas cores e alguns Upgrades

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,5 @@
 <ion-header translucent>
+  <!-- Barra Inicial-->
   <ion-toolbar color="tertiary">
     <ion-title>
       Pokedex App
@@ -6,11 +7,12 @@
   </ion-toolbar>
 </ion-header>
 
+<!--Cor da Página-->
 <ion-content fullscreen color="dark">
-
+  <!--Barra de Pesquisa-->
   <ion-searchbar placeholder="Buscar Pokemons" color="medium"></ion-searchbar>
 
-
+  <!--Item da Lista - Bulbasaur -->
   <ion-item-sliding>
     <ion-item color="dark">
       <ion-chip slot="start">
@@ -38,6 +40,7 @@
   </ion-item-sliding>
 
 
+  <!--Item da Lista - Charmander -->
   <ion-item-sliding>
     <ion-item color="dark">
       <ion-chip slot="start">
@@ -46,7 +49,7 @@
       <ion-label>
         <div>
           <h2>Charmander</h2>
-          <ion-badge color="danger">Fire</ion-badge>
+          <ion-badge color="fire">Fire</ion-badge>
         </div>
       </ion-label>
       <ion-thumbnail slot="end">
@@ -64,6 +67,8 @@
   </ion-item-sliding>
 
 
+
+  <!--Item da Lista - Squirtle -->
   <ion-item-sliding>
     <ion-item color="dark">
       <ion-chip slot="start">
@@ -72,7 +77,7 @@
       <ion-label>
         <div>
           <h2>Squirtle</h2>
-          <ion-badge color="primary">Water</ion-badge>
+          <ion-badge color="water">Water</ion-badge>
         </div>
       </ion-label>
       <ion-thumbnail slot="end">
@@ -90,6 +95,9 @@
   </ion-item-sliding>
 
 
+
+
+  <!--Item da Lista - Caterpie -->
   <ion-item-sliding>
     <ion-item color="dark">
       <ion-chip slot="start">
@@ -98,7 +106,7 @@
       <ion-label>
         <div>
           <h2>Caterpie</h2>
-          <ion-badge color="medium">Bug</ion-badge>
+          <ion-badge color="bug">Bug</ion-badge>
         </div>
       </ion-label>
       <ion-thumbnail slot="end">
@@ -116,7 +124,7 @@
   </ion-item-sliding>
 
 
-
+  <!--Item da Lista - Ratata -->
   <ion-item-sliding>
     <ion-item color="dark">
       <ion-chip slot="start">
@@ -125,7 +133,7 @@
       <ion-label>
         <div>
           <h2>Ratata</h2>
-          <ion-badge color="medium">Normal</ion-badge>
+          <ion-badge color="normal">Normal</ion-badge>
         </div>
       </ion-label>
       <ion-thumbnail slot="end">
@@ -142,6 +150,8 @@
     </ion-item-options>
   </ion-item-sliding>
 
+
+  <!--Item da Lista - Pikachu -->
   <ion-item-sliding>
     <ion-item color="dark">
       <ion-chip slot="start">
@@ -150,7 +160,7 @@
       <ion-label>
         <div>
           <h2>Pikachu</h2>
-          <ion-badge color="warning">Eletric</ion-badge>
+          <ion-badge color="eletric">Eletric</ion-badge>
         </div>
       </ion-label>
       <ion-thumbnail slot="end">
@@ -167,6 +177,9 @@
     </ion-item-options>
   </ion-item-sliding>
 
+
+
+  <!--Item da Lista - Sandshrew -->
   <ion-item-sliding>
     <ion-item color="dark">
       <ion-chip slot="start">
@@ -175,7 +188,7 @@
       <ion-label>
         <div>
           <h2>Sandshrew</h2>
-          <ion-badge color="warning">Ground</ion-badge>
+          <ion-badge color="ground">Ground</ion-badge>
         </div>
       </ion-label>
       <ion-thumbnail slot="end">
@@ -192,6 +205,9 @@
     </ion-item-options>
   </ion-item-sliding>
 
+
+
+  <!--Item da Lista - Nidoran -->
   <ion-item-sliding>
     <ion-item color="dark">
       <ion-chip slot="start">
@@ -218,7 +234,7 @@
   </ion-item-sliding>
 
 
-
+  <!--Item da Lista - Vupix -->
   <ion-item-sliding>
     <ion-item color="dark">
       <ion-chip slot="start">
@@ -227,7 +243,7 @@
       <ion-label>
         <div>
           <h2>Vupix</h2>
-          <ion-badge color="danger">Fire</ion-badge>
+          <ion-badge color="fire">Fire</ion-badge>
         </div>
       </ion-label>
       <ion-thumbnail slot="end">
@@ -246,7 +262,7 @@
 
 
 
-
+  <!--Item da Lista - Zubat -->
   <ion-item-sliding>
     <ion-item color="dark">
       <ion-chip slot="start">
@@ -256,7 +272,7 @@
         <div>
           <h2>Zubat</h2>
           <ion-badge color="poison">Poison</ion-badge>
-          <ion-badge color="medium">Flying</ion-badge>
+          <ion-badge color="flying">Flying</ion-badge>
         </div>
       </ion-label>
       <ion-thumbnail slot="end">
