--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -3,12 +3,11 @@ ion-badge{
 }
 
 ion-item-option{
-  border-radius:15px;
   margin-right:5px;
-  border-color:black;
-
+  border-radius:10px;
 }
 
  ion-item-options{
    border-color:#1C1C1C;
+   border-style: none;
  }
