--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,293 +1,60 @@
 <ion-header translucent>
   <!-- Barra Inicial-->
-  <ion-toolbar color="tertiary">
+  <ion-toolbar color="danger">
     <ion-title>
       Pokedex App
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<!--Cor da Página-->
+
 <ion-content fullscreen color="dark">
-  <!--Barra de Pesquisa-->
   <ion-searchbar placeholder="Buscar Pokemons" color="medium"></ion-searchbar>
 
-  <!--Item da Lista - Bulbasaur -->
-  <ion-item-sliding>
+  <ion-item-sliding *ngFor="let pokemon of pokemonList">
     <ion-item color="dark">
       <ion-chip slot="start">
-        <ion-label color="success">001</ion-label>
+        <ion-label color="success">{{pokemon.id}}</ion-label>
       </ion-chip>
       <ion-label>
-        <div>
-          <h2>Bulbasaur</h2>
-          <ion-badge color="planta">Grass</ion-badge>
-          <ion-badge color="poison">Poison</ion-badge>
+        <div *ngFor="let nome of pokemon.forms">
+          <h2>{{nome.name | titlecase}}</h2>
+          <ion-badge [color]="tipo.type.name | lowercase" *ngFor="let tipo of pokemon.types">{{tipo.type.name}}</ion-badge>
         </div>
       </ion-label>
       <ion-thumbnail slot="end">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png">
+        <img [src]="pokemon.sprites.front_default">
       </ion-thumbnail>
     </ion-item>
     <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)" color="warning">
+      <ion-item-option (click)="editar(pokemon)" color="warning">
         <ion-icon name="create-outline" size="large"></ion-icon>
       </ion-item-option>
-      <ion-item-option (click)="unread(item)" color="danger">
+      <ion-item-option (click)="deletar(pokemon)" color="danger">
         <ion-icon name="trash-outline" size="large"></ion-icon>
       </ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
-
-
-  <!--Item da Lista - Charmander -->
-  <ion-item-sliding>
-    <ion-item color="dark">
-      <ion-chip slot="start">
-        <ion-label color="success">004</ion-label>
-      </ion-chip>
-      <ion-label>
-        <div>
-          <h2>Charmander</h2>
-          <ion-badge color="fire">Fire</ion-badge>
-        </div>
-      </ion-label>
-      <ion-thumbnail slot="end">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png">
-      </ion-thumbnail>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)" color="warning">
-        <ion-icon name="create-outline" size="large"></ion-icon>
-      </ion-item-option>
-      <ion-item-option (click)="unread(item)" color="danger">
-        <ion-icon name="trash-outline" size="large"></ion-icon>
-      </ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-
-
-
-  <!--Item da Lista - Squirtle -->
-  <ion-item-sliding>
-    <ion-item color="dark">
-      <ion-chip slot="start">
-        <ion-label color="success">007</ion-label>
-      </ion-chip>
-      <ion-label>
-        <div>
-          <h2>Squirtle</h2>
-          <ion-badge color="water">Water</ion-badge>
-        </div>
-      </ion-label>
-      <ion-thumbnail slot="end">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/007.png">
-      </ion-thumbnail>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)" color="warning">
-        <ion-icon name="create-outline" size="large"></ion-icon>
-      </ion-item-option>
-      <ion-item-option (click)="unread(item)" color="danger">
-        <ion-icon name="trash-outline" size="large"></ion-icon>
-      </ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-
-
-
-
-  <!--Item da Lista - Caterpie -->
-  <ion-item-sliding>
-    <ion-item color="dark">
-      <ion-chip slot="start">
-        <ion-label color="success">010</ion-label>
-      </ion-chip>
-      <ion-label>
-        <div>
-          <h2>Caterpie</h2>
-          <ion-badge color="bug">Bug</ion-badge>
-        </div>
-      </ion-label>
-      <ion-thumbnail slot="end">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/010.png">
-      </ion-thumbnail>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)" color="warning">
-        <ion-icon name="create-outline" size="large"></ion-icon>
-      </ion-item-option>
-      <ion-item-option (click)="unread(item)" color="danger">
-        <ion-icon name="trash-outline" size="large"></ion-icon>
-      </ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-
-
-  <!--Item da Lista - Ratata -->
-  <ion-item-sliding>
-    <ion-item color="dark">
-      <ion-chip slot="start">
-        <ion-label color="success">019</ion-label>
-      </ion-chip>
-      <ion-label>
-        <div>
-          <h2>Ratata</h2>
-          <ion-badge color="normal">Normal</ion-badge>
-        </div>
-      </ion-label>
-      <ion-thumbnail slot="end">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/019.png">
-      </ion-thumbnail>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)" color="warning">
-        <ion-icon name="create-outline" size="large"></ion-icon>
-      </ion-item-option>
-      <ion-item-option (click)="unread(item)" color="danger">
-        <ion-icon name="trash-outline" size="large"></ion-icon>
-      </ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-
-
-  <!--Item da Lista - Pikachu -->
-  <ion-item-sliding>
-    <ion-item color="dark">
-      <ion-chip slot="start">
-        <ion-label color="success">025</ion-label>
-      </ion-chip>
-      <ion-label>
-        <div>
-          <h2>Pikachu</h2>
-          <ion-badge color="eletric">Eletric</ion-badge>
-        </div>
-      </ion-label>
-      <ion-thumbnail slot="end">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/025.png">
-      </ion-thumbnail>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)" color="warning">
-        <ion-icon name="create-outline" size="large"></ion-icon>
-      </ion-item-option>
-      <ion-item-option (click)="unread(item)" color="danger">
-        <ion-icon name="trash-outline" size="large"></ion-icon>
-      </ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-
-
-
-  <!--Item da Lista - Sandshrew -->
-  <ion-item-sliding>
-    <ion-item color="dark">
-      <ion-chip slot="start">
-        <ion-label color="success">027</ion-label>
-      </ion-chip>
-      <ion-label>
-        <div>
-          <h2>Sandshrew</h2>
-          <ion-badge color="ground">Ground</ion-badge>
-        </div>
-      </ion-label>
-      <ion-thumbnail slot="end">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/027.png">
-      </ion-thumbnail>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)" color="warning">
-        <ion-icon name="create-outline" size="large"></ion-icon>
-      </ion-item-option>
-      <ion-item-option (click)="unread(item)" color="danger">
-        <ion-icon name="trash-outline" size="large"></ion-icon>
-      </ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-
-
-
-  <!--Item da Lista - Nidoran -->
-  <ion-item-sliding>
-    <ion-item color="dark">
-      <ion-chip slot="start">
-        <ion-label color="success">032</ion-label>
-      </ion-chip>
-      <ion-label>
-        <div>
-          <h2>Nidoran</h2>
-          <ion-badge color="poison">Poison</ion-badge>
-        </div>
-      </ion-label>
-      <ion-thumbnail slot="end">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/032.png">
-      </ion-thumbnail>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)" color="warning">
-        <ion-icon name="create-outline" size="large"></ion-icon>
-      </ion-item-option>
-      <ion-item-option (click)="unread(item)" color="danger">
-        <ion-icon name="trash-outline" size="large"></ion-icon>
-      </ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-
-
-  <!--Item da Lista - Vupix -->
-  <ion-item-sliding>
-    <ion-item color="dark">
-      <ion-chip slot="start">
-        <ion-label color="success">037</ion-label>
-      </ion-chip>
-      <ion-label>
-        <div>
-          <h2>Vupix</h2>
-          <ion-badge color="fire">Fire</ion-badge>
-        </div>
-      </ion-label>
-      <ion-thumbnail slot="end">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/037.png">
-      </ion-thumbnail>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)" color="warning">
-        <ion-icon name="create-outline" size="large"></ion-icon>
-      </ion-item-option>
-      <ion-item-option (click)="unread(item)" color="danger">
-        <ion-icon name="trash-outline" size="large"></ion-icon>
-      </ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-
-
-
-  <!--Item da Lista - Zubat -->
-  <ion-item-sliding>
-    <ion-item color="dark">
-      <ion-chip slot="start">
-        <ion-label color="success">041</ion-label>
-      </ion-chip>
-      <ion-label>
-        <div>
-          <h2>Zubat</h2>
-          <ion-badge color="poison">Poison</ion-badge>
-          <ion-badge color="flying">Flying</ion-badge>
-        </div>
-      </ion-label>
-      <ion-thumbnail slot="end">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/041.png">
-      </ion-thumbnail>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)" color="warning">
-        <ion-icon name="create-outline" size="large"></ion-icon>
-      </ion-item-option>
-      <ion-item-option (click)="unread(item)" color="danger">
-        <ion-icon name="trash-outline" size="large"></ion-icon>
-      </ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-
-
 </ion-content>
+
+/* CÓDIGO DA PAGINAÇÃO COM AUXÍLIO DE LEONARDO E CARLOS EDUARDO */
+
+<ion-footer color="danger">
+   <ion-toolbar color="danger">
+    <ion-buttons slot="start" *ngIf="previous">
+      <ion-button (click)="paginaAnterior()">
+        <ion-icon slot="icon-only" name="chevron-back-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    Página {{ page }} do total de {{ totalPages }} páginas
+
+
+    <ion-buttons slot="end" *ngIf="next">
+      <ion-button (click)="proximaPagina()">
+        <ion-icon slot="icon-only" name="chevron-forward-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+      
+   </ion-toolbar>
+</ion-footer>
